--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx:1.24.0
+
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY ../../app/index.html /usr/share/nginx/html/index.html
+COPY index.html /usr/share/nginx/html/
